# ltv-prediction

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/input/: ltv_prediction_input_sample.parquet
data/raw/: ltv_prediction_raw_sample.parquet
notebooks/: exploratory_data_analysis.ipynb  model.ipynb
scripts/: predict.py  train.py
src/ltv/: config.py  logging.py
src/ltv/data/: split.py
src/ltv/evaluation/: metrics.py  scaling.py
src/ltv/features/: encoders.py  preprocess.py
src/ltv/models/: calibration.py  hurdle.py  save_load.py  xgb.py
src/ltv/pipeline/: predict.py  train.py
