[build-system]
requires = ["setuptools==75.6.0", "wheel==0.44.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ltv-prediction"
version = "0.1.0"
description = "Zero-inflated LTV prediction using a hurdle model (XGBoost classifier + regressor) with calibration and SHAP."
readme = "README.md"
requires-python = "==3.12.*"
license = { text = "MIT" }
dependencies = [
  # Core ML / data stack
  "numpy==2.3.5",
  "pandas==3.0.0",
  "scikit-learn==1.8.0",
  "scipy==1.17.0",
  "xgboost==3.1.3",

  # Explainability / utilities
  "shap==0.50.0",
  "joblib==1.5.3",
  "tqdm==4.67.2",

  # IO
  "pyarrow==23.0.0",

  # Plotting
  "matplotlib==3.10.8",
  "seaborn==0.13.2",

  # Notebooks / interactive
  "ipykernel==7.1.0",
  "ipython==9.9.0",
  "jupyter_client==8.8.0",
  "jupyter_core==5.9.1",
  "matplotlib-inline==0.2.1",

  # Debugging (optional but harmless)
  "debugpy==1.8.20",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
